# perplexica-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/perplexica_mcp/: server.py
tests/: test_models.py
