[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perplexica-mcp"
version = "0.3.6"
description = "A Model Context Protocol (MCP) server that provides search functionality using Perplexica's AI-powered search engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  {name = "thetom42", email = "thetom42@gmail.com"}
]
maintainers = [
  {name = "thetom42", email = "thetom42@gmail.com"}
]
keywords = ["mcp", "model-context-protocol", "perplexica", "search", "ai", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastmcp>=2.14,<3",
  "httpx",
  "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/thetom42/perplexica-mcp"
Repository = "https://github.com/thetom42/perplexica-mcp"
Issues = "https://github.com/thetom42/perplexica-mcp/issues"
Documentation = "https://github.com/thetom42/perplexica-mcp#readme"

[project.scripts]
perplexica-mcp = "perplexica_mcp:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "isort",
  "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/perplexica_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.uv]
